<resources>
    <string name="ip_api_sale">http://192.168.1.1:8888/promocao</string>
    <string name="ip_api_image">http://192.168.1.1:8888/imagens/</string>
    <string name="ip_api_login">http://192.168.1.1:8888/autenticacao</string>
    <string name="app_name">Bernadete</string>
    <string name="title_main">Guarda Roupa</string>
    <string name="title_look">Visual</string>
    <string name="title_sale">Promoções</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Nome</string>
    <string name="description">Descrição</string>
    <string name="filter">Filtro</string>
    <string name="save">Salvar</string>
    <string name="category">Categoria</string>
    <string name="hint_piece_name">Digite o nome da peça de roupa</string>
    <string name="hint_piece_description">Digite informações extras sobre a peça</string>
    <string name="hint_title_notification">Digite um título para a notificação</string>
    <string name="hint_notifi_description">Digite informações a notificação</string>
    <string name="hint_notifi_place">Digite informações sobre o local</string>
    <string name="title_register_piece">Cadastro de Peça de Roupa</string>
    <string name="title_update_piece">Atualização de Peça de Roupa</string>
    <string name="api_error_connection">Não há conexão com a Internet.</string>
    <string name="no_clothes">Não há roupa cadastradas.</string>
    <string name="autentication_title">Autenticação</string>
    <string name="email_title">E-mail</string>
    <string name="place_title">Local</string>
    <string name="password_title">Senha</string>
    <string name="register">Cadastre-se</string>
    <string name="date_title">Data e Hora</string>
    <string name="title">Título</string>
    <string name="image_warning">Clique na câmera para escolher a sua imagem</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
