<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context="com.digitalindividual.bernadete.CadastroPeca"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/txt_titulo_cadastro"/>

        <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/ic_dashboard_black_24dp"
            android:id="@+id/img_piece"
            android:onClick="openGallery"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/name"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:inputType="text"
            android:hint="@string/hint_piece_name"
            android:id="@+id/txt_peca_nome"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/filter"
            android:textColor="@color/colorTextAlternative"
            android:backgroundTint="@color/colorPrimaryDark"
            android:id="@+id/btn_filtro"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:id="@+id/list_selected_filter">
        </ListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/category"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spn_categoria">
        </Spinner>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/description"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:inputType="text"
            android:hint="@string/hint_piece_description"
            android:id="@+id/txt_peca_descricao"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            android:textColor="@color/colorTextAlternative"
            android:backgroundTint="@color/colorPrimaryDark"
            android:id="@+id/btn_salvar"/>

    </LinearLayout>


</ScrollView>