<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_effect"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.digitalindividual.bernadete.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTextAlternative"
        android:text="@string/autentication_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorTextAlternative"
        android:text="@string/email_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:hint="Digite o seu e-mail"
        android:textColor="@color/colorTextAlternative"
        android:textColorHint="@color/colorCyan"
        android:backgroundTint="@color/colorTextAlternative"
        android:id="@+id/txt_email"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorTextAlternative"
        android:text="@string/password_title"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Digite o sua senha"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/colorTextAlternative"
        android:textColorHint="@color/colorCyan"
        android:backgroundTint="@color/colorTextAlternative"
        android:id="@+id/txt_senha"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/save"
        android:textSize="13sp"
        android:textColor="@color/colorPrimaryDark"
        android:background="@color/colorTextAlternative"
        android:onClick="login"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTextAlternative"
        android:text="@string/register"/>


</LinearLayout>
